# ralph-scaffold

./: .gitignore  .mise.toml  .ralphrc.json  CLAUDE.md  PRD.md  README.md  TASKS-v0.2.0.md  TASKS.md  install.sh  justfile  prd.json  pyproject.toml
.ralph/: AGENTS.md  PROMPT.md
scaffold/: .mise.toml.example  justfile.example  prd.json.example
scaffold/.ralph/: AGENTS.md  PROMPT.md
scaffold/hooks/: pre-commit
scaffold/scripts/: ralph.py  task_runner.py
tests/: test_ralph.py  test_task_runner.py
